--- a/less/home-page.less
+++ b/less/home-page.less
@@ -87,6 +87,9 @@
       margin-bottom: 30px;
       @media @tablet {
         width:100%;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
       }
       .btn {
         .buttonStyle(85%, @eastern-blue , @white);
